# 5E-Companion

./: .gitignore  build.gradle  settings.gradle
Dungeon Companion/: CMakeLists.txt  build.gradle  proguard-rules.pro
Dungeon Companion/src/main/: AndroidManifest.xml
Dungeon Companion/src/main/cpp/: Character.cpp  Character.h  CharacterClass.cpp  CharacterClass.h  Character_JNI.cpp  Character_JNI.h  Character_Lua.cpp  Character_Lua.h  Error.cpp  Error.h  Lua_JNI.cpp  Lua_JNI.h  Race.cpp  Race.h  Race_JNI.cpp  Subclass.cpp  Subclass.h  Subrace.cpp  Subrace.h  Utility.cpp  Utility.h  native_lib.cpp.cpp
Dungeon Companion/src/main/java/com/schoolerc/dungeoncompanion/: Character.java  Lua.java
Dungeon Companion/src/main/java/com/schoolerc/dungeoncompanion/data/: AbilityScore.java  AbilityScoreModifier.java  Character.java  CharacterClass.java  CharacterSnapshot.java  CharacterState.java  DataParser.java  JsonParser.java  Modifier.java  Race.java  Repository.java
Dungeon Companion/src/main/java/com/schoolerc/dungeoncompanion/entity/: AbilityScore.java  AbilityScoreModifier.java  AbilityScoresComponent.java  Character.java  CharacterClass.java  CharacterState.java  Component.java  Race.java  Subrace.java  ToughnessComponent.java
Dungeon Companion/src/main/java/com/schoolerc/dungeoncompanion/loader/: CharacterClassLoader.java  RaceDescriptorLoader.java  RaceLoader.java
Dungeon Companion/src/main/java/com/schoolerc/dungeoncompanion/provider/: DataProvider.java  DatabaseOpenHelper.java  EntityProvider.java
Dungeon Companion/src/main/java/com/schoolerc/dungeoncompanion/ui/: AbilityScoresFragment.java  CharacterClassListAdapter.java  InventoryItemFragment.java  MoneyFragment.java  RaceDescriptor.java  RaceDescriptorAdapter.java  RaceDescriptorLoaderCallbacks.java  RaceListAdapter.java  SubraceDescriptor.java  WeaponFragment.java
Dungeon Companion/src/main/java/com/schoolerc/dungeoncompanion/ui/creator/: AbilityScoresAdapter.java  AbilityScoresEditFragment.java  CharacterCreatorActivity.java  ClassSelectorFragment.java  FinalizerFragment.java  PointBuyBank.java  PointBuyValidator.java  RaceSelectorFragment.java  RolledValidator.java  SubraceSelectorFragment.java  Validator.java
Dungeon Companion/src/main/java/com/schoolerc/dungeoncompanion/ui/display/: CharacterDetailsFragment.java  CharacterDisplayActivity.java  CharacterListFragment.java
Dungeon Companion/src/main/java/com/schoolerc/dungeoncompanion/util/: FileUtil.java  Math.java  OnErrorListener.java  Pair.java
Dungeon Companion/src/main/res/color/: primary_text_material_dark.xml
Dungeon Companion/src/main/res/drawable/: border.xml  list_view_selector.xml  ripple_effect.xml
Dungeon Companion/src/main/res/layout/: activity_character.xml  activity_character_creator.xml  fragment_ability_scores.xml  fragment_ability_scores_edit.xml  fragment_character_details.xml  fragment_character_list.xml  fragment_class_selector.xml  fragment_finalizer.xml  fragment_inventory_item.xml  fragment_money.xml  fragment_race_selector.xml  fragment_subrace_selector.xml  fragment_weapon.xml  layout_ability_score_dragable.xml  layout_class_item.xml  layout_race_item.xml
Dungeon Companion/src/main/res/layout-land/: activity_character.xml
Dungeon Companion/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
Dungeon Companion/src/main/staging/class/: barbarian.json
Dungeon Companion/src/main/staging/components/race/dwarf/: base.xml  hill.xml
Dungeon Companion/src/main/staging/components/race/elf/: base.xml  high.xml
Dungeon Companion/src/main/staging/components/race/half_elf/: base.xml
Dungeon Companion/src/main/staging/race/: dwarf.json
Dungeon Companion/src/main/staging/scripts/: dwarf.js
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/schoolerc/ddcompanion/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/schoolerc/fiftheditioncompanion/: FragmentTest.java  XmlTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: race_dwarf_base.xml  race_elf_base.xml  race_half_elf_base.xml
app/src/main/assets/components/damage/: base.xml
app/src/main/assets/components/race/elf/: base.xml
app/src/main/assets/components/vision/: base.xml
app/src/main/assets/effects/: conditions_base.xml
app/src/main/assets/libraries/: conditions_base.xml  damage_base.xml  skill_base.xml
app/src/main/assets/libraries/race/dwarf/: base.xml  hill.xml
app/src/main/assets/libraries/race/elf/: base.xml  high.xml
app/src/main/assets/race/: race_dwarf_base.xml  race_elf_base.xml  race_half_elf_base.xml
app/src/main/assets/race/dwarf/: base.xml  hill.xml
app/src/main/assets/race/elf/: base.xml  high.xml
app/src/main/assets/race/half_elf/: base.xml
app/src/main/java/com/schoolerc/ddcompanion/: AbilityScore.java  AbilityScoreIncrease.java  Character.java  CharacterActivity.java  CharacterBase.java  CharacterClass.java  CharacterClassComponent.java  CharacterComponent.java  CharacterComponentFactory.java  CharacterDecorator.java  CharacterLoader.java  (+17 more)
app/src/main/res/color/: primary_text_material_dark.xml
app/src/main/res/layout/: activity_character.xml  activity_character_creator.xml  fragment_ability_scores.xml  fragment_ability_scores_edit.xml  fragment_character_details.xml  fragment_character_list.xml  fragment_class.xml  fragment_inventory_item.xml  fragment_money.xml  fragment_race.xml  fragment_weapon.xml
app/src/main/res/layout-land/: activity_character.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: resource_paths.xml
app/src/main/staging/components/: race.xml
app/src/main/staging/scripts/: dwarf.js
gradle/wrapper/: gradle-wrapper.properties
scripter/src/main/java/com/schoolerc/: Scripter.java
(+250 files in other folders)
